# qt-material-widgets

./: .gitignore  CMakeLists.txt  README.md
components/: CMakeLists.txt  qtmaterialappbar.cpp  qtmaterialappbar.h
components/lib/: qtmaterialtheme.cpp
examples/: CMakeLists.txt  appbarsettingseditor.cpp  autocompletesettingseditor.cpp
